// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton render with cancellable false props 1`] = `
<CancelButton
  disabled={true}
  id="id"
  name="some-name"
  onClick={[MockFunction]}
/>
`;

exports[`ActionButton render with cancellable true props 1`] = `
<CancelButton
  disabled={false}
  id="id"
  name="some-name"
  onClick={[MockFunction]}
/>
`;

exports[`ActionButton render with resumable true props 1`] = `
<ResumeButton
  disabled={false}
  id="id"
  name="some-name"
  onClick={[MockFunction]}
/>
`;
